# skill-creator

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.claude/: settings.local.json
.opencode/agents/: skill-builder.md  skill-use.md
backend/skill_creator_service/: __init__.py  asr.py  audio_uploads.py  config.py  frontmatter.py  jobs.py  llm.py  main.py  models.py  opencode.py  promotion.py  store.py
data/skill_creator/: README.md
data/skill_creator/_template/: draft.md  index.md  proposal.md  published.md
docs/: index.yaml
docs/architecture/: system-overview.md
docs/constraints/: engineering-constraints.md
docs/decisions/: decision-log.md
docs/lessons/: lessons-learned.md
docs/risks/: tech-debt-and-risks.md
docs/worklog/: 2026-05-07-text-polish-and-output-language.md  _task-template.md
docs/worklog/active/: 2026-04-28-text-asr-and-ui-handoff.md
docs/worklog/archive/: 2026-04-28-text-asr-and-ui-handoff.md  2026-05-06-document-latest-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  audio.ts  draft.ts  main.ts  main.tsx  styles.css  types.ts
frontend/src/components/: Details.tsx  (+8 more)
scripts/: deploy-public.sh  dev.sh  serve-frontend.mjs  start-backend.sh  start-frontend-dev.sh  start-frontend.sh  stop-backend.sh  stop-dev.sh  stop-frontend.sh
tests/: test_api_privileges.py  test_audio_uploads.py  test_deploy_public_script.py  test_frontmatter.py  test_jobs.py  test_llm.py  test_opencode_stream.py  test_store.py  test_text_polish.py
(+3 files in other folders)
